# traviz

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
doc/: CONTROLS.md
examples/: mini.json  small.json
src/: analyze_dependency.rs  analyze_span.rs  analyze_utils.rs  builtin_relations.rs  colors.rs  edit_modes.rs  edit_relations.rs  legacy.rs  lib.rs  main.rs  modes.rs  node_filter.rs  persistent.rs  profiling.rs  relation.rs  structured_modes.rs  task_timer.rs  theoretical.rs  types.rs
src/theoretical/: mod.rs
src/theoretical/models/: mod.rs  optimistic_block.rs  optimistic_witness.rs  realistic.rs  stateless_validation.rs  timing.rs  very_optimistic.rs
tests/: analyze_dependency_test.rs  analyze_span_test.rs  test_helpers.rs
