[package]
name = "traviz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
directories = "=6.0.0"
eframe = { version = "0.31.0", features = [ "default" ] }
hex = "0.4.3"
opentelemetry-proto = { version = "0.5.0", features = ["gen-tonic", "trace", "with-serde"] }
rand = "0.9.1"
rfd = "0.15.2"
serde = "1.0.219"
serde_json = "1.0.138"

[features]
default = []
profiling = []

[profile.dev.package."*"]
opt-level = 3
