[package]
name = "traviz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
directories = "6.0.0"
eframe = { version = "0.31.0", features = [ "default" ] }
flate2 = "1.1.2"
hex = "0.4.3"
opentelemetry-proto = { version = "0.5.0", features = ["gen-tonic", "trace", "with-serde"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
regex = "1.10"
rfd = "0.15.2"
serde = "1.0.219"
serde_json = "1.0.138"
sha2 = "0.10.9"
uuid = { version = "1.17.0", features = ["std", "serde", "v4"] }

[dev-dependencies]
approx = "0.5"

[features]
default = []
profiling = []

[profile.dev.package."*"]
opt-level = 3
